--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -1,7 +1,4 @@
-<form method="POST" action="">
-    Name <input type="text" name="name" />
-    <br>
-    Email <input type="email" name="email" />
-    <br>
-    <input type="submit" >
-</form>
+{% include 'navBar.html' %}
+<div>
+    <h1>BONJOUR</h1>
+</div>
