navBar on all pages

--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -4,9 +4,9 @@
     <title>Login</title>
 </head>
 <body>
-
+{% include 'navBar.html' %}
 <form method="POST" action="">
-    <h1>Login to WELIFT</h1>
+    <h2>Login to WELIFT</h2>
     <br><br>
     Name <input type="text" name="name" />
     <br><br>
