--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -1,11 +1,11 @@
-<table border="1">
+<!--<table border="1">
     {% for user in userDetails %}
     <tr>
         <td> {{user[0]}} </td>
         <td> {{user[1]}} </td>
     </tr>
     {% endfor %}
-</table>
+</table>-->
 
 
 <html lang="en">
@@ -14,6 +14,7 @@
     <title>Account info</title>
 </head>
 <body>
+{% include 'navBar.html' %}
 
 <h2>Account info</h2><br><br>
 
