--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>WeLift</title>
-    <h1>We lift YOU pay</h1>
 </head>
 <body>
+{% include 'navBar.html' %}
+
 
 </body>
 </html>
