--- a/src/presentation/templates/navBar.html
+++ b/src/presentation/templates/navBar.html
@@ -1,4 +1,9 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navBer_style.css') }}"/>
+</head>
 <div id="navBar">
-    <a href="home">WeLift</a>
+    <a href="home">
+        <img width="200px" src="{{ url_for('static', filename='images/logo1.png') }}"/>
+    </a>
     <a href="logout">Logout</a>
 </div>
