--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -8,9 +8,9 @@
 <form method="POST" action="">
     <h2>Login to WELIFT</h2>
     <br><br>
-    Name <input type="text" name="name" />
-    <br><br>
     Email <input type="email" name="email" />
+    <br><br>
+    Password <input type="password" name="password" />
     <br><br>
     <input type="submit" >
 
