post in db *start*

--- a/src/presentation/templates/register.html
+++ b/src/presentation/templates/register.html
@@ -8,7 +8,7 @@
 
 <h2>Register</h2>
 
-<form>
+<form action="/register" method="post">
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email" ><br><br>
 
@@ -31,18 +31,15 @@
     <br><br>
 
 
+
     <label for="birthday">Birthdate:</label>
     <input type="date" id="birthday" name="birthday">
-    <input type="submit"><br><br>
-
+    <br/><br/>
     <label for="country">Country:</label><br>
     <input type="text" id="country" name="country" ><br><br>
-
     <label for="phone">Phone:</label><br>
     <input type="text" id="phone" name="phone" ><br><br>
 
-    <label for="balance">Balance:</label><br>
-    <input type="number" id="balance" name="balance" ><br><br>
 
 
 
