valide que le courriel n'est pas déjà utilisé avant de register

--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 {% include 'navBar.html' %}
-<form method="POST" action="">
+<form method="POST" action="/login">
     <h2>Login to WELIFT</h2>
     <br><br>
     Email <input type="email" name="email" />
