--- a/src/presentation/templates/navBar.html
+++ b/src/presentation/templates/navBar.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navBer_style.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navBar_style.css') }}"/>
 </head>
 <div id="navBar">
     <a href="home">
