--- a/src/presentation/templates/register.html
+++ b/src/presentation/templates/register.html
@@ -43,7 +43,7 @@
 
 
 
-    <input type="submit" value="Create account">
+    <button type="submit">Register</button>
 
     <p>Already have an account? Click <a href="login">here</a></p>
 </form> 
