--- a/src/presentation/templates/navBar.html
+++ b/src/presentation/templates/navBar.html
@@ -5,7 +5,8 @@
     <a href="home">
         <img width="200px" src="{{ url_for('static', filename='images/logo1.png') }}"/>
     </a>
-    <form action="/logout" method="GET">
-        <input type="submit" value="Logout">
-    </form>
+    <a href="logout">
+        Logout
+    </a>
+
 </div>
