--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -7,12 +7,7 @@
 <body>
 {% include 'navBar.html' %}
 
-{% if session['fname'] %}
-<p>You login as {{session['fname']}}</p>
-{% else %}
-<p>Not logged in yet</p>
-{% endif %} 
-
+<h1> bonjour, {{ firstName }}</h1>
 
 </body>
 </html>
