--- a/src/presentation/templates/createtrip.html
+++ b/src/presentation/templates/createtrip.html
@@ -8,7 +8,7 @@
 
 <h2>Create your trip</h2>
 
-<form>
+<form action="/createtrip" method="POST"></form>
     <label for="departure">Departure:</label><br>
     <input type="text" id="departure" name="departure" ><br><br>
 
@@ -16,7 +16,7 @@
     <input type="text" id="destination" name="destination" ><br><br>
 
     <label for="date">Date:</label><br>
-    <input type="datetime" id="date" name="date" ><br><br>
+    <input type="datetime-local" id="date" name="date" ><br><br>
 
     <label for="distance">Distance km (optional):</label><br>
     <input type="number" id="distance" name="distance" ><br><br>
@@ -36,16 +36,10 @@
     <label for="price">Price:</label><br>
     <input type="number" id="price" name="price" ><br>
 
-    <p>Negociable?</p>
-    <input type="radio" id="yes" name="price" value="yes">
-    <label for="yes">Yes</label><br>
-    <input type="radio" id="no" name="price" value="no">
-    <label for="no">No</label><br>
-
     <br><br><br>
 
 
-    <input type="submit" value="Create trip">
+    <button type="submit">Create a trip</button>
 
 </form> 
 
