insert cars and trips

--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -8,7 +8,7 @@
 
 <h2>Enter your car's information</h2>
 
-<form>
+<form action="/choosecar" method="POST">
     <label for="license">License plate:</label><br>
     <input type="text" id="license" name="license" ><br><br>
 
@@ -25,7 +25,7 @@
     <input type="text" id="color" name="color" ><br><br>
 
 
-    <input type="submit" value="Confirm car">
+    <button type="submit">Confirm Car</button>
 </form> 
 
 
