--- a/src/presentation/templates/createtrip.html
+++ b/src/presentation/templates/createtrip.html
@@ -8,7 +8,7 @@
 
 <h2>Create your trip</h2>
 
-<form action="/createtrip" method="POST"></form>
+<form action="/createtrip" method="POST">
     <label for="departure">Departure:</label><br>
     <input type="text" id="departure" name="departure" ><br><br>
 
