--- a/src/presentation/templates/index.html
+++ b/src/presentation/templates/index.html
@@ -7,9 +7,7 @@
 
     {% include 'navBar.html' %}
 
-    <div>
-        <h1>BONJOUR</h1>
-    </div>
+    <h1> bonjour, {{ bienvenue }}</h1>
 
     <br><br><br>
 
@@ -25,9 +23,7 @@
 
     <br><br><br>
 
-    <form action="/users">
-        <input type="submit" value="Account info" />
-    </form>
+
 
 
 
