A finir pour dans 2 jours

--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -8,7 +8,7 @@
 
 <h2>Enter your car's information</h2>
 
-<form action="/choosecar" method="POST">
+<form action="/choosecar/{{ id }}" method="POST">
     <label for="license">License plate:</label><br>
     <input type="text" id="license" name="license" ><br><br>
 
