--- a/src/presentation/templates/searchlift.html
+++ b/src/presentation/templates/searchlift.html
@@ -40,6 +40,7 @@
         <td> {{trajet[2]}} </td>
         <td> {{trajet[3]}} </td>
         <td> {{trajet[4]}} </td>
+        <td> {{trajet[5]}} </td>
         <td> <form action="/paymentTrip"><button >Book this trip</button></form></td>
     </tr>
 
