--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 {% include 'navBar.html' %}
-<h1>Connectez-vous</h1>
+<div style="width: 100%; height: 100%; position: fixed; background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url('https://upload.wikimedia.org/wikipedia/en/4/4a/Lakelouiscanada.jpg'); background-position: right; background-size: cover;">
+    <div class="pt-5" style="width: 100%; height: 100%">
+        <h1 class="text-center mt-5 display-1" style="color: white">Welcome to WeLift!</h1>
+        <h4 class="text-center mt-2" style="color: white">Climb aboard the most popular carpooling network!</h4>
+
+    </div>
+</div>
 </body>
 </html>
