--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -3,21 +3,32 @@
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-<body>
+<body style="margin: 0; background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url('https://upload.wikimedia.org/wikipedia/en/4/4a/Lakelouiscanada.jpg'); background-position: right; background-size: contain;">
 {% include 'navBar.html' %}
-<form method="POST" action="/login">
-    <h2>Login to WELIFT</h2>
-    <br><br>
-    Email <input type="email" name="email" />
-    <br><br>
-    Password <input type="password" name="password" />
-    <br><br>
-    <input type="submit" >
+<div style="width: 35%; height: 100%; background-color: white; position: fixed">
+    <div class="mt-5" style="height: 100%; width: 100%">
+        <form method="POST" action="/login" class="pt-5 mx-4">
+            <h1>Welcome!</h1>
+            <h3>Please login.</h3>
 
-    <p>Don't have an account? Click <a href="register">here</a> to register!</p>
-</form>
+            <div style="margin: 30px 0px 20px 0px">
+                <label>Email</label>
+                <input type="email" name="email" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div style="margin-bottom: 40px">
+                <label>Password</label>
+                <input type="password" name="password" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
 
+            <button type="submit" style="width: 100%; height: 40px; background-color: #2c3e50; color: white; cursor: pointer; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box; margin-bottom: 20px">Login</button>
 
+            <p class="text-center">Don't have an account? Click <a href="register">here</a> to register!</p>
+        </form>
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+            <p class="mb-1">&copy; 2019-2020 WeLift</p>
+        </footer>
+    </div>
+</div>
 
 </body>
 </html>
