--- a/src/presentation/templates/register.html
+++ b/src/presentation/templates/register.html
@@ -3,51 +3,230 @@
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
-<body>
+<body style="margin: 0; background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url('https://upload.wikimedia.org/wikipedia/en/4/4a/Lakelouiscanada.jpg'); background-position: right; background-size: contain;">
 {% include 'navBar.html' %}
 
-<h2>Register</h2>
+<!--
+<div class="container">
+    <div class="pt-5 text-center">
+        <img class="d-block mx-auto mt-5" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h2>Register.</h2>
+        <p class="lead">Climb aboard the most popular carpooling network!</p>
+    </div>
 
-<form action="/register" method="post">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" ><br><br>
+    <div class="row">
+        <div class="col-12">
+            <h4 class="mb-3">Informations</h4>
+            <form class="needs-validation" novalidate>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="firstName">First name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid first name is required.
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="lastName">Last name</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid last name is required.
+                        </div>
+                    </div>
+                </div>
 
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" ><br><br>
+                <div class="mb-3">
+                    <label for="username">Username</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">@</span>
+                        </div>
+                        <input type="text" class="form-control" id="username" placeholder="Username" required>
+                        <div class="invalid-feedback" style="width: 100%;">
+                            Your username is required.
+                        </div>
+                    </div>
+                </div>
 
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname" ><br><br>
+                <div class="mb-3">
+                    <label for="email">Email <span class="text-muted">(Optional)</span></label>
+                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                    <div class="invalid-feedback">
+                        Please enter a valid email address for shipping updates.
+                    </div>
+                </div>
 
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" ><br><br>
+                <div class="mb-3">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                    <div class="invalid-feedback">
+                        Please enter your shipping address.
+                    </div>
+                </div>
 
-    <p>Please select your gender:</p>
-    <input type="radio" id="male" name="gender" value="male">
-    <label for="male">Male</label><br>
-    <input type="radio" id="female" name="gender" value="female">
-    <label for="female">Female</label><br>
-    <input type="radio" id="other" name="gender" value="other">
-    <label for="other">Other</label>
-    <br><br>
+                <div class="mb-3">
+                    <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+                    <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+                </div>
+
+                <div class="row">
+                    <div class="col-md-5 mb-3">
+                        <label for="country">Country</label>
+                        <select class="custom-select d-block w-100" id="country" required>
+                            <option value="">Choose...</option>
+                            <option>United States</option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Please select a valid country.
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="state">State</label>
+                        <select class="custom-select d-block w-100" id="state" required>
+                            <option value="">Choose...</option>
+                            <option>California</option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Please provide a valid state.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="zip">Zip</label>
+                        <input type="text" class="form-control" id="zip" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Zip code required.
+                        </div>
+                    </div>
+                </div>
+                <hr class="mb-4">
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="same-address">
+                    <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="save-info">
+                    <label class="custom-control-label" for="save-info">Save this information for next time</label>
+                </div>
+                <hr class="mb-4">
+
+                <h4 class="mb-3">Payment</h4>
+
+                <div class="d-block my-3">
+                    <div class="custom-control custom-radio">
+                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
+                        <label class="custom-control-label" for="credit">Credit card</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
+                        <label class="custom-control-label" for="debit">Debit card</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
+                        <label class="custom-control-label" for="paypal">Paypal</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="cc-name">Name on card</label>
+                        <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                        <small class="text-muted">Full name as displayed on card</small>
+                        <div class="invalid-feedback">
+                            Name on card is required
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="cc-number">Credit card number</label>
+                        <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Credit card number is required
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <label for="cc-expiration">Expiration</label>
+                        <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Expiration date required
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="cc-expiration">CVV</label>
+                        <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Security code required
+                        </div>
+                    </div>
+                </div>
+                <hr class="mb-4">
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+            </form>
+        </div>
+    </div>
+
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+        <p class="mb-1">&copy; 2019-2020 WeLift</p>
+    </footer>
+</div>
+-->
 
 
+<div style="width: 35%; height: 100%; background-color: white; position: fixed">
+    <div class="mt-5" style="height: 100%; width: 100%; overflow-y: auto">
+        <form action="/register" method="POST" class="pt-5 mx-4">
+            <h1>Welcome!</h1>
+            <h3>Please register.</h3>
 
-    <label for="birthday">Birthdate:</label>
-    <input type="date" id="birthday" name="birthday">
-    <br/><br/>
-    <label for="country">Country:</label><br>
-    <input type="text" id="country" name="country" ><br><br>
-    <label for="phone">Phone:</label><br>
-    <input type="text" id="phone" name="phone" ><br><br>
+            <div class="row mt-4">
+                <div class="col-6">
+                    <label>First name</label>
+                    <input type="text" id="fname" name="fname" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+                </div>
+                <div class="col-6">
+                    <label>Last name</label>
+                    <input type="text" id="lname" name="lname" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
 
+                </div>
+            </div>
 
+            <div class="mt-3">
+                <label>Email</label>
+                <input type="email" id="email" name="email" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div class="mt-3">
+                <label>Password</label>
+                <input type="password" id="password" name="password" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div class="mt-3">
+                <label>Birthdate</label>
+                <input type="date" id="birthday" name="birthday" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div class="mt-3">
+                <label>Phone number</label>
+                <input type="text" id="phone" name="phone" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div class="mt-3">
+                <label>Country</label>
+                <input type="text" id="country" name="country" style="width: 100%; height: 40px; padding-left: 5px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box">
+            </div>
+            <div class="mt-3 mb-4">
+                <p>Please select your gender:</p>
+                <input type="radio" id="male" name="gender" value="male">
+                <label for="male">Male</label><br>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label><br>
+                <input type="radio" id="other" name="gender" value="other">
+                <label for="other">Other</label>
+            </div>
 
-
-    <button type="submit">Register</button>
-
-    <p>Already have an account? Click <a href="login">here</a></p>
-</form> 
-
+            <button type="submit" style="width: 100%; height: 40px; background-color: #2c3e50; color: white; cursor: pointer; display: inline-block; border: 1px solid #cccccc; border-radius: 4px; box-sizing: border-box; margin-bottom: 20px">Register</button>
+            <p class="text-center">Already have an account? Click <a href="login">here</a> to login!</p>
+        </form>
+        <footer class="my-5 pb-5 text-muted text-center text-small">
+            <p class="mb-1">&copy; 2019-2020 WeLift</p>
+        </footer>
+    </div>
+</div>
 
 </body>
 </html>
