--- a/src/presentation/templates/paymentTrip.html
+++ b/src/presentation/templates/paymentTrip.html
@@ -14,14 +14,11 @@
     <label for="date">Date of departure:</label><br><br>
     <label for="departure">Departure location:</label><br><br>
     <label for="destination">Destination:</label><br><br>
-    <label for="distance">Distance in km:</label><br><br>
     <label for="capacity">Number of Passengers:</label><br><br>
     <label for="stopovers">Stopovers:</label><br><br>
     <label for="driverName">Driver's name:</label><br><br>
-    <label for="driverID">Driver's ID:</label><br><br>
-    <label for="passengersID">Passengers's ID:</label><br><br><br><br>
 
-
+    <label for=""></label>
 
     <h2>Car informations</h2> 
 
@@ -30,9 +27,6 @@
     <label for="model">Model:</label><br><br>
     <label for="year">Year:</label><br><br>
     <label for="color">Color:</label><br><br><br><br>
-
-
-    <h2>Payment</h2> 
 
     <label for="price">Price:</label><br><br> 
 
