--- a/src/presentation/templates/navBar.html
+++ b/src/presentation/templates/navBar.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navBar_style.css') }}"/>
 </head>
 <div>
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark" style="background-color: rgba(0, 0, 0, .85); backdrop-filter: saturate(180%) blur(20px)">
         <a class="navbar-brand" href="home">WeLift.</a>
         <div class="collapse navbar-collapse">
             <div class="navbar-nav">
