debut de payementTrip

--- a/src/presentation/templates/paymentTrip.html
+++ b/src/presentation/templates/paymentTrip.html
@@ -10,15 +10,14 @@
 
 <form>
 
-
-    <label for="date">Date of departure:</label><br><br>
+    <label for="date">Date of departure: {{currentTrip[1]}}</label><br><br>
     <label for="departure">Departure location:</label><br><br>
     <label for="destination">Destination:</label><br><br>
     <label for="capacity">Number of Passengers:</label><br><br>
     <label for="stopovers">Stopovers:</label><br><br>
     <label for="driverName">Driver's name:</label><br><br>
 
-    <label for=""></label>
+    <label for="reviews">Reviews</label><br><br>
 
     <h2>Car informations</h2> 
 
