--- a/src/presentation/templates/login.html
+++ b/src/presentation/templates/login.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
 </head>
 <body style="margin: 0; background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url('https://upload.wikimedia.org/wikipedia/en/4/4a/Lakelouiscanada.jpg'); background-position: right; background-size: contain;">
 {% include 'navBar.html' %}
@@ -10,6 +11,16 @@
         <form method="POST" action="/login" class="pt-5 mx-4">
             <h1>Welcome!</h1>
             <h3>Please login.</h3>
+
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul class="alert-warning alert">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
 
             <div style="margin: 30px 0px 20px 0px">
                 <label>Email</label>
