--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -48,9 +48,11 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     {% if session['ID'] %}
-                                    <button type="button" class="btn btn-sm btn-primary">Select</button>
+                                    <form action="/paymentTrip/{{ trip[0] }}">
+                                        <button type="submit" class="btn btn-sm btn-primary">Select</button>
+                                    </form>
                                     {% else %}
-                                    <button type="button" class="btn btn-sm btn-primary disabled">Select</button>
+                                    <button type="submit" class="btn btn-sm btn-primary disabled">Select</button>
                                     {% endif %}
                                 </div>
                                 <small class="text-muted">9 mins</small>
