gestion des données vide dans register

--- a/src/presentation/templates/navBar.html
+++ b/src/presentation/templates/navBar.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+    <base href="/">
 </head>
 <div>
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark" style="background-color: rgba(0, 0, 0, .85); backdrop-filter: saturate(180%) blur(20px)">
