--- a/src/presentation/templates/register.html
+++ b/src/presentation/templates/register.html
@@ -60,7 +60,7 @@
                 <label for="male">Male</label><br>
                 <input type="radio" id="female" name="gender" value="female">
                 <label for="female">Female</label><br>
-                <input type="radio" id="other" name="gender" value="other">
+                <input type="radio" id="other" name="gender" value="other" checked>
                 <label for="other">Other</label>
             </div>
 
