Create trip fix

--- a/src/presentation/templates/createtrip.html
+++ b/src/presentation/templates/createtrip.html
@@ -16,13 +16,10 @@
     <input type="text" id="destination" name="destination" ><br><br>
 
     <label for="date">Date:</label><br>
-    <input type="datetime-local" id="date" name="date" ><br><br>
+    <input type="text" placeholder="YYYY-MM-JJ HH:MM:SS" id="date" name="date" ><br><br>
 
     <label for="distance">Distance km (optional):</label><br>
     <input type="number" id="distance" name="distance" ><br><br>
-
-    <label for="capacity">Car capacity:</label><br>
-    <input type="number" id="capacity" name="capacity" ><br><br>
 
     <p>Will there be stopovers?</p>
     <input type="radio" id="yes" name="stopover" value="yes">
@@ -34,7 +31,7 @@
     <br><br>
 
     <label for="price">Price:</label><br>
-    <input type="number" id="price" name="price" ><br>
+    <input type="number" id="price" name="price" step="0.01"><br>
 
     <br><br><br>
 
