--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -18,6 +18,9 @@
     <label for="model">Model:</label><br>
     <input type="text" id="model" name="model" ><br><br>
 
+    <label for="capacity">Passengers capacity:</label><br>
+    <input type="number" id="capacity" name="capacity" ><br><br>
+
     <label for="year">Year:</label><br>
     <input type="number" id="year" name="year" ><br><br>
 
