--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -10,11 +10,12 @@
 
 <main role="main">
 
-    <section class="my-5 jumbotron text-center" style="background-color: white; height: 400px">
-        <div class="pt-5 container">
+    <section class="my-5 jumbotron text-center" style="background-color: transparent; height: 400px">
+        <div class="pt-5 container justify-content-center">
+
             <h1 class="jumbotron-heading" style="font-weight: 300">Welift.</h1>
-            <p class="lead text-muted">Climb aboard the newest carpooling network! Here are some available trips.</p>
-            <p>
+            <p class="lead text-muted" style=" margin:auto; background-color: black; width: 60%;">Climb aboard the newest carpooling network! Here are some available trips.</p>
+            <p style="background-color: transparent;">
                 {% if session['ID'] %}
                 <a href="searchlift" class="btn btn-primary my-2">Search more lifts</a>
                 <a href="createtrip" class="btn btn-secondary my-2">Create lift</a>
@@ -22,16 +23,18 @@
                 <a href="searchlift" class="btn btn-primary my-2 disabled">Search more lifts</a>
                 <a href="createtrip" class="btn btn-secondary my-2 disabled">Create lift</a>
                 {% endif %}
+            <div  id="earth"></div>
             </p>
+
         </div>
+
     </section>
 
-    <div class="py-5 bg-light">
-        <div class="container">
-
-            <div class="row">
+    <div class="py-5 bg-light" style="z-index: 2;">
+        <div class="container" style="z-index: 3;">
+            <div class="row" style="z-index: 4;">
                 {% for trip in trips %}
-                <div class="col-md-4">
+                <div class="col-md-4" style="z-index: 5;">
                     <div class="card mb-4 box-shadow">
                         {% set img = "../../static/images/%s.jpg" | format(trip[3]) %}
                         <img class="card-img-top" src={{img}} onerror="this.src='../../static/images/welift.jpg'" style="max-height: 198px" alt={{ trip[3] }}>
@@ -41,6 +44,7 @@
                                 <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
                                 </svg>
+
                                 Departure: {{ trip[2] }}
                             </p>
                             <p>
@@ -73,136 +77,80 @@
                     </div>
                 </div>
                 {% endfor %}
-                <!--
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                -->
             </div>
         </div>
     </div>
-
 </main>
 
-</div>
 </body>
 </html>
+<script>
+    var earth = document.getElementById("earth");
+    window.addEventListener("scroll", function() {
+        earth.classList.add("earth");
+        setTimeout(function(){
+            earth.classList.remove("earth")
+        }, 4000);
+    });
+
+</script>
+<style>
+    #earth {
+
+        position: absolute;
+        right: 38%;
+        top: 10%;
+
+        z-index: -1;
+        width: 25%;
+        height: auto;
+        padding-top: 25%;
+
+        transition: transform 200ms linear;
+
+        color: #000;
+        border-radius: 50%;
+        background: url('../../static/images/earth.jpg') 0 0 repeat-x;
+        background-size: 200%;
+        box-shadow: inset 20px 0 80px 6px rgba(0, 0, 0, 1);
+
+        transform-style: preserve-3d;
+    }
+    .earth{
+        animation: rotate 4s linear infinite;
+    }
+    #earth:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        content: '';
+
+        border-radius: 50%;
+        box-shadow: -80px 15px 80px 10px rgba(0,0,0,.9) inset;
+    }
+
+    #earth:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+
+        content: '';
+
+        opacity: .2;
+        border-radius: 50%;
+        background: radial-gradient(circle at 100px 100px, #fff, #000);
+    }
+
+    @keyframes rotate {
+        0% {background-position: 0 0;}
+        100% {background-position: 700px 0;}
+    }
+</style>
