--- a/src/presentation/templates/logout.html
+++ b/src/presentation/templates/logout.html
@@ -3,18 +3,20 @@
     <meta charset="UTF-8">
     <title>Logout</title>
 </head>
-<body>
+<body style="margin: 0; background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url('https://upload.wikimedia.org/wikipedia/en/4/4a/Lakelouiscanada.jpg'); background-position: right; background-size: contain;">
 {% include 'navBar.html' %}
+<div style="width: 35%; height: 100%; background-color: white; position: fixed">
+    <div class="mt-5 text-center" style="height: 100%; width: 100%">
+        <h1 class="py-5">See you soon !</h1>
+        <br><br>
 
 
-    <h1>See you soon !</h1>
-    <br><br>
-
-
-    <p>Forgot something? Click <a href="login">here</a> to log back in!</p>
-
-
-
+        <p>Forgot something? Click <a href="login">here</a> to log back in!</p>
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+            <p class="mb-1">&copy; 2019-2020 WeLift</p>
+        </footer>
+    </div>
+</div>
 
 </body>
 </html>
