--- a/src/presentation/templates/home.html
+++ b/src/presentation/templates/home.html
@@ -27,6 +27,7 @@
         </div>
     </section>
 
+    <div id="earth"></div>
     <div class="py-5 bg-light" style="z-index: 2;">
         <div class="container" style="z-index: 3;">
             <div class="row" style="z-index: 4;">
