--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -3,6 +3,76 @@
     <meta charset="UTF-8">
     <title>Choose your car</title>
 </head>
+
+<body>
+{% include 'navBar.html' %}
+
+<section class="my-5 jumbotron text-center" style="background-color: white; height: 300px">
+    <div class="pt-5 container">
+        <h1 class="jumbotron-heading" style="font-weight: 300">Create.</h1>
+        <p class="lead text-muted">Fill the form below with your car's selection.</p>
+    </div>
+</section>
+
+<div class="py-5 bg-light">
+    <div class="col-md-8 order-md-2 container" style="width: 60%">
+        <h4 class="mb-3">Car's information</h4>
+        <form action="/choosecar/{{ id }}" method="POST">
+
+            <div class="mb-3">
+                <label for="license">License plate</label>
+                <input type="text" id="license" name="license" class="form-control">
+            </div>
+
+            <div class="mb-3">
+                <label for="brand">Brand</label>
+                <input type="text" id="brand" name="brand" class="form-control">
+            </div>
+
+            <div class="mb-3">
+                <label for="model">Model</label>
+                <input type="text" id="model" name="model" class="form-control">
+            </div>
+
+            <div class="mb-3">
+                <label for="capacity">Passengers capacity</label>
+                <input type="number" id="capacity" name="capacity" class="form-control">
+            </div>
+
+            <div class="mb-3">
+                <label for="year">Year</label>
+                <input type="number" id="year" name="year" class="form-control">
+            </div>
+
+            <div class="mb-3">
+                <label for="color">Color</label>
+                <input type="text" id="color" name="color" class="form-control">
+            </div>
+
+            <div class="py-5 pb-5 bg-light">
+                <div class="container" style="width: 100%">
+                    <div style="margin-bottom: 50px; margin-left: 80%">
+                        <button type="submit" class="btn btn-primary my-2" style="width: 300px">
+                            <svg class="bi bi-chevron-double-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L9.293 8 3.646 2.354a.5.5 0 010-.708z" clip-rule="evenodd"/>
+                                <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L13.293 8 7.646 2.354a.5.5 0 010-.708z" clip-rule="evenodd"/>
+                            </svg>
+                            Create
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2019-2020 WeLift</p>
+</footer>
+
+</body>
+
+<!--
 <body>
 {% include 'navBar.html' %}
 
@@ -33,4 +103,5 @@
 
 
 </body>
+-->
 </html>
