--- a/src/presentation/templates/paymentTrip.html
+++ b/src/presentation/templates/paymentTrip.html
@@ -13,7 +13,15 @@
         <p class="lead text-muted">Reviews the lift's informations before payment.</p>
     </div>
 </section>
-
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class="alert-warning alert" style="width: 50%; margin: auto; margin-bottom: 20px;">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
 <div class="py-5 bg-light">
     <div class="card mb-4 container" style="width: 60%">
         <div class="card-body text-center">
