--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -68,6 +68,18 @@
                     </svg>
                     Phone number: {{ user[8] }}
                 </h3>
+                <div class="mb-3 pb-2 border-bottom justify-content-between">
+                    <h3 style="display: inline">
+                    <svg class="bi bi-bag" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 5H2v9a1 1 0 001 1h10a1 1 0 001-1V5zM1 4v10a2 2 0 002 2h10a2 2 0 002-2V4H1z" clip-rule="evenodd"/>
+                        <path d="M8 1.5A2.5 2.5 0 005.5 4h-1a3.5 3.5 0 117 0h-1A2.5 2.5 0 008 1.5z"/>
+                    </svg>
+                    Balance: {{ user[9] }} $
+                    </h3>
+                    <form action="/fillAccount" style="display: inline; margin-left: 80%">
+                        <button type="submit" class="btn btn-light btn-outline-dark">Add money</button>
+                    </form>
+                </div>
             </div>
         </div>
         {% if tripAsDriver is defined and tripAsDriver|length %}
