footer deposit money

--- a/src/presentation/templates/fillAccount.html
+++ b/src/presentation/templates/fillAccount.html
@@ -22,5 +22,9 @@
         </form>
     </div>
 </div>
+<footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2019-2020 WeLift</p>
+</footer>
+
 </body>
 </html>
