--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -17,7 +17,7 @@
 <div class="py-5 bg-light">
     <div class="col-md-8 order-md-2 container" style="width: 60%">
         <h4 class="mb-3">Car's information</h4>
-        <form action="/choosecar/{{ id }}" method="POST">
+        <form action="/choosecar/{{ id }}/{{ id_driver }}" method="POST">
 
             <div class="mb-3">
                 <label for="license">License plate</label>
