--- a/src/presentation/templates/choosecar.html
+++ b/src/presentation/templates/choosecar.html
@@ -49,9 +49,9 @@
                 <input type="text" id="color" name="color" class="form-control">
             </div>
 
-            <div class="py-5 pb-5 bg-light">
+            <div class="py-5 bg-light">
                 <div class="container" style="width: 100%">
-                    <div style="margin-bottom: 50px; margin-left: 80%">
+                    <div style="margin-left: 80%">
                         <button type="submit" class="btn btn-primary my-2" style="width: 300px">
                             <svg class="bi bi-chevron-double-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L9.293 8 3.646 2.354a.5.5 0 010-.708z" clip-rule="evenodd"/>
