--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -16,7 +16,7 @@
     <div class="bg-light" style="padding-bottom: 3rem">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <ul class="alert-warning alert">
+        <ul class="alert-info alert">
             {% for message in messages %}
             <li>{{ message }}</li>
             {% endfor %}
